<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AddNewStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:id="@+id/et_name"
                android:inputType="textCapSentences"

                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/father_name"
                android:id="@+id/et_f_name"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"

            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxCornerRadiusTopEnd="@dimen/margin_small"
                app:boxCornerRadiusTopStart="@dimen/margin_small"
                app:hintTextColor="@color/color_primary"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:inputType="none"
                    android:clickable="false"
                    android:focusable="false"

                    android:id="@+id/et_dob"
                    android:paddingLeft="@dimen/padding_normal" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_typeOfLiability"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                app:hintTextColor="@color/black"
                android:hint="@string/gender">

                <AutoCompleteTextView
                    android:id="@+id/et_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_normal"
                    android:textSize="@dimen/text_size_small"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Permanent Address"
                android:id="@+id/et_p_address"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Current Address"
                android:id="@+id/et_c_address"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:id="@+id/et_contact_number"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Batch"
                android:id="@+id/et_batch"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Department"
                android:id="@+id/et_department"
                android:inputType="textCapSentences"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Roll Number"
                android:id="@+id/et_roll_number"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:hintTextColor="@color/color_primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/color_primary"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pb"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>


</ScrollView>